--- a/120-document_classification_and_nlp.ipynb
+++ b/120-document_classification_and_nlp.ipynb
@@ -993,11 +993,11 @@
       "source": [
         "This table, of course with only the tf*idf values, is going to be used as feature table when building a model based on tf-idf values. \n",
         "\n",
-        "The TFidfVectorizer is a great tool from Scikit-Learn to calculate the tf-idf score for each distinct word in the complete data set (in this case the training set X_train). It creates a matrix in which the number of rows equals the number of documents (in this case the e-mails in the training set) and the number of columns equals the number of distinct words in the complete set of documents. Each cell contains the tfidf score for the corresponding word in the corresponding document.\n",
+        "The `TFidfVectorizer()` is a great tool from Scikit-Learn to calculate the tf-idf score for each distinct word in the complete data set. It creates a matrix in which the number of rows equals the number of documents (e.g. the number of e-mails in the training set of an e-mail classifier) and the number of columns equals the number of distinct words in the complete set of documents. Each cell contains the tfidf score for the corresponding word in the corresponding document.\n",
         "\n",
-        "The function get_feature_names() of TFidfVectorizer return all the differents words in the document set.\n",
+        "The function `get_feature_names()` of `TFidfVectorizer()` return all the differents words in the document set.\n",
         "\n",
-        "If you would like to use the raw word count instead of the tfidf score you could use CountVectorizer."
+        "If you would like to use the raw word count instead of the tfidf score you could use `CountVectorizer()`."
       ]
     },
     {
