--- a/110-training_deep_neural_networks.ipynb
+++ b/110-training_deep_neural_networks.ipynb
@@ -84,7 +84,7 @@
     "  - with 10 layers or many more\n",
     "  - each containing hundreds of neurons\n",
     "  - linked by hundreds of thousands of connections\n",
-    "- When training you may the run into several problems: \n",
+    "- When training you may then run into several problems: \n",
     "  - _vanishing gradients_ problem or the related _exploding gradients_ problem. This is when the gradients grow smaller and smaller, or larger and larger, when flowing backward through the DNN during training. Both of these problems make lower layers very hard to train.\n",
     "  - **not have enough training** data for such a large network, or it might be too costly to label.\n",
     "  - training may be extremely **slow**.\n",
@@ -278,7 +278,7 @@
     "- There are, however, a few conditions for self-normalization to happen:\n",
     "  - The input features must be standardized (mean 0 and standard deviation 1).\n",
     "  - Every hidden layer’s weights must be initialized with a special initialisation, called _LeCun normal initialization_. In Keras, this means setting kernel_initializer=\"lecun_normal\".\n",
-    "  - The network’s architecture must be sequential (so no loops al in recurrent networks)\n",
+    "  - The network’s architecture must be sequential (so no loops as in recurrent networks)\n",
     "\n",
     "Using SELU is easy:"
    ]
