--- a/082-exercise_adventure_works.ipynb
+++ b/082-exercise_adventure_works.ipynb
@@ -42,11 +42,92 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "VYIhf_I2kZUO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>OrderNumber</th>\n",
+              "      <th>CustomerKey</th>\n",
+              "      <th>LineNumber</th>\n",
+              "      <th>Model</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>SO72773</td>\n",
+              "      <td>11001</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Sport-100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>SO72773</td>\n",
+              "      <td>11001</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Road-750</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>SO72773</td>\n",
+              "      <td>11001</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Water Bottle</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>SO72773</td>\n",
+              "      <td>11001</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Road Bottle Cage</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SO68413</td>\n",
+              "      <td>11012</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Road Tire Tube</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  OrderNumber  CustomerKey  LineNumber             Model\n",
+              "0     SO72773        11001           4         Sport-100\n",
+              "1     SO72773        11001           1          Road-750\n",
+              "2     SO72773        11001           2      Water Bottle\n",
+              "3     SO72773        11001           3  Road Bottle Cage\n",
+              "4     SO68413        11012           1    Road Tire Tube"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "df.head()"
       ]
