--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -94,6 +94,10 @@
     "- [Building OAT](solutions/021-exercise_building_oat_solution.ipynb)\n",
     "- [Heart Disease](solutions/031-exercise_heart_disease_solution.ipynb)\n",
     "- [Ensembles Breast Cancer](solutions/071-exercise-ensembles_breast_cancer_solution.ipynb)\n",
+    "- [Market Basket - Orders](solutions/082-market_basket_analysis_exercise_order_solution.ipynb)\n",
+    "- [Market Basket - Customers](solutions/083-market_basket_analysis_exercise_customer_solution.ipynb)\n",
+    "- [Clustering - Wholesale customers](solutions/085-clustering_exercise_wholesale_customers_solution.ipynb)\n",
+    "- [NN - penguins/breast cancer](solutions/101-exercise_pinguins_breast_cancer_solution.ipynb)\n",
     "\n"
    ]
   }
