--- a/020-end_to_end_machine_learning_project.ipynb
+++ b/020-end_to_end_machine_learning_project.ipynb
@@ -4143,8 +4143,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
