--- a/110-training_deep_neural_networks.ipynb
+++ b/110-training_deep_neural_networks.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -378,15 +378,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1719/1719 [==============================] - 15s 8ms/step - loss: 1.0808 - accuracy: 0.5875 - val_loss: 0.7535 - val_accuracy: 0.7268\n",
+      "1719/1719 [==============================] - 13s 7ms/step - loss: 1.0865 - accuracy: 0.5835 - val_loss: 0.9469 - val_accuracy: 0.6922\n",
       "Epoch 2/5\n",
-      "1719/1719 [==============================] - 13s 8ms/step - loss: 0.6618 - accuracy: 0.7571 - val_loss: 0.5921 - val_accuracy: 0.7878\n",
+      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.7039 - accuracy: 0.7486 - val_loss: 0.6276 - val_accuracy: 0.7726\n",
       "Epoch 3/5\n",
-      "1719/1719 [==============================] - 14s 8ms/step - loss: 0.5599 - accuracy: 0.7945 - val_loss: 0.6036 - val_accuracy: 0.7906\n",
+      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.5643 - accuracy: 0.8030 - val_loss: 0.5466 - val_accuracy: 0.8094\n",
       "Epoch 4/5\n",
-      "1719/1719 [==============================] - 15s 9ms/step - loss: 0.5413 - accuracy: 0.8059 - val_loss: 0.4919 - val_accuracy: 0.8286\n",
+      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.5102 - accuracy: 0.8243 - val_loss: 0.4829 - val_accuracy: 0.8306\n",
       "Epoch 5/5\n",
-      "1719/1719 [==============================] - 15s 9ms/step - loss: 0.4871 - accuracy: 0.8265 - val_loss: 0.4585 - val_accuracy: 0.8440\n"
+      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.4678 - accuracy: 0.8377 - val_loss: 0.4658 - val_accuracy: 0.8418\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -447,15 +447,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1719/1719 [==============================] - 12s 6ms/step - loss: 1.7702 - accuracy: 0.2780 - val_loss: 1.4824 - val_accuracy: 0.3470\n",
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.7719 - accuracy: 0.6840 - val_loss: 0.7699 - val_accuracy: 0.6946\n",
       "Epoch 2/5\n",
-      "1719/1719 [==============================] - 11s 6ms/step - loss: 1.2034 - accuracy: 0.4837 - val_loss: 1.0297 - val_accuracy: 0.5528\n",
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.7324 - accuracy: 0.7011 - val_loss: 1.5120 - val_accuracy: 0.4376\n",
       "Epoch 3/5\n",
-      "1719/1719 [==============================] - 11s 6ms/step - loss: 1.0226 - accuracy: 0.5759 - val_loss: 0.8916 - val_accuracy: 0.6216\n",
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.7738 - accuracy: 0.6890 - val_loss: 0.6524 - val_accuracy: 0.7448\n",
       "Epoch 4/5\n",
-      "1719/1719 [==============================] - 11s 6ms/step - loss: 0.8909 - accuracy: 0.6501 - val_loss: 0.7518 - val_accuracy: 0.7158\n",
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.6567 - accuracy: 0.7384 - val_loss: 0.6488 - val_accuracy: 0.7440\n",
       "Epoch 5/5\n",
-      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.7646 - accuracy: 0.7095 - val_loss: 0.7669 - val_accuracy: 0.7130\n"
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.6184 - accuracy: 0.7573 - val_loss: 0.6002 - val_accuracy: 0.7686\n"
      ]
     }
    ],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,33 +507,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " flatten_5 (Flatten)         (None, 784)               0         \n",
+      " flatten_4 (Flatten)         (None, 784)               0         \n",
       "                                                                 \n",
       " batch_normalization (BatchN  (None, 784)              3136      \n",
       " ormalization)                                                   \n",
       "                                                                 \n",
-      " dense_408 (Dense)           (None, 300)               235500    \n",
+      " dense_306 (Dense)           (None, 300)               235500    \n",
       "                                                                 \n",
       " batch_normalization_1 (Batc  (None, 300)              1200      \n",
       " hNormalization)                                                 \n",
       "                                                                 \n",
-      " dense_409 (Dense)           (None, 100)               30100     \n",
+      " dense_307 (Dense)           (None, 100)               30100     \n",
       "                                                                 \n",
       " batch_normalization_2 (Batc  (None, 100)              400       \n",
       " hNormalization)                                                 \n",
       "                                                                 \n",
-      " dense_410 (Dense)           (None, 10)                1010      \n",
+      " dense_308 (Dense)           (None, 10)                1010      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 271,346\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -568,25 +568,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1719/1719 [==============================] - 4s 2ms/step - loss: 0.8750 - accuracy: 0.7123 - val_loss: 0.5525 - val_accuracy: 0.8228\n",
+      "1719/1719 [==============================] - 4s 2ms/step - loss: 0.8558 - accuracy: 0.7167 - val_loss: 0.5626 - val_accuracy: 0.8150\n",
       "Epoch 2/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.5753 - accuracy: 0.8030 - val_loss: 0.4724 - val_accuracy: 0.8476\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.5782 - accuracy: 0.8041 - val_loss: 0.4833 - val_accuracy: 0.8384\n",
       "Epoch 3/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.5189 - accuracy: 0.8206 - val_loss: 0.4375 - val_accuracy: 0.8546\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.5225 - accuracy: 0.8210 - val_loss: 0.4464 - val_accuracy: 0.8498\n",
       "Epoch 4/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4827 - accuracy: 0.8322 - val_loss: 0.4153 - val_accuracy: 0.8598\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4839 - accuracy: 0.8338 - val_loss: 0.4244 - val_accuracy: 0.8562\n",
       "Epoch 5/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4565 - accuracy: 0.8407 - val_loss: 0.3997 - val_accuracy: 0.8642\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4595 - accuracy: 0.8397 - val_loss: 0.4075 - val_accuracy: 0.8602\n",
       "Epoch 6/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4397 - accuracy: 0.8473 - val_loss: 0.3868 - val_accuracy: 0.8694\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4401 - accuracy: 0.8470 - val_loss: 0.3965 - val_accuracy: 0.8640\n",
       "Epoch 7/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4242 - accuracy: 0.8515 - val_loss: 0.3763 - val_accuracy: 0.8714\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4278 - accuracy: 0.8509 - val_loss: 0.3856 - val_accuracy: 0.8672\n",
       "Epoch 8/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4144 - accuracy: 0.8539 - val_loss: 0.3712 - val_accuracy: 0.8740\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4146 - accuracy: 0.8555 - val_loss: 0.3792 - val_accuracy: 0.8676\n",
       "Epoch 9/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4024 - accuracy: 0.8582 - val_loss: 0.3631 - val_accuracy: 0.8754\n",
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.4045 - accuracy: 0.8588 - val_loss: 0.3727 - val_accuracy: 0.8710\n",
       "Epoch 10/10\n",
-      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.3914 - accuracy: 0.8623 - val_loss: 0.3572 - val_accuracy: 0.8760\n"
+      "1719/1719 [==============================] - 3s 2ms/step - loss: 0.3939 - accuracy: 0.8617 - val_loss: 0.3669 - val_accuracy: 0.8714\n"
      ]
     }
    ],
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -821,9 +821,9 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "1719/1719 [==============================] - 5s 2ms/step - loss: 0.5755 - accuracy: 0.8031 - val_loss: 0.3721 - val_accuracy: 0.8630\n",
+      "1719/1719 [==============================] - 4s 2ms/step - loss: 0.5649 - accuracy: 0.8045 - val_loss: 0.3657 - val_accuracy: 0.8678\n",
       "Epoch 2/2\n",
-      "1719/1719 [==============================] - 4s 2ms/step - loss: 0.4217 - accuracy: 0.8449 - val_loss: 0.3483 - val_accuracy: 0.8704\n"
+      "1719/1719 [==============================] - 4s 2ms/step - loss: 0.4189 - accuracy: 0.8468 - val_loss: 0.3458 - val_accuracy: 0.8672\n"
      ]
     }
    ],
@@ -845,8 +845,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
