--- a/111-exercise_churn.ipynb
+++ b/111-exercise_churn.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Churn problem \n",
         "\n",
-        "A bank is investigating a very high rate of customer leaving the bank. Here is a 10.000 records dataset to investigate and predict which of the customers are more likely to leave the bank soon."
+        "A bank is investigating a very high rate of customers leaving the bank. Here is a 10.000 records dataset to investigate and predict which of the customers are more likely to leave the bank soon."
       ]
     },
     {
@@ -806,8 +806,12 @@
       "name": "Chapter 11 Exercise Churn Modelling Solution.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.12 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
