--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -98,6 +98,7 @@
     "- [Market Basket - Customers](solutions/083-market_basket_analysis_exercise_customer_solution.ipynb)\n",
     "- [Clustering - Wholesale customers](solutions/085-clustering_exercise_wholesale_customers_solution.ipynb)\n",
     "- [NN - penguins/breast cancer](solutions/101-exercise_pinguins_breast_cancer_solution.ipynb)\n",
+    "- [NN - churn](solutions/111-exercise_churn_solution.ipynb)\n",
     "\n"
    ]
   }
