--- a/120-document_classification_and_nlp.ipynb
+++ b/120-document_classification_and_nlp.ipynb
@@ -997,7 +997,9 @@
         "\n",
         "The function `get_feature_names()` of `TFidfVectorizer()` return all the differents words in the document set.\n",
         "\n",
-        "If you would like to use the raw word count instead of the tfidf score you could use `CountVectorizer()`."
+        "If you would like to use the raw word count instead of the tfidf score you could use `CountVectorizer()`.\n",
+        "\n",
+        "The `TFidfVectorizer()` and `CountVectorizer()` can be used in a transformation Pipeline."
       ]
     },
     {
