--- a/120-document_classification_and_nlp.ipynb
+++ b/120-document_classification_and_nlp.ipynb
@@ -844,7 +844,7 @@
       },
       "source": [
         "#### Using n-grams\n",
-        "Instead of counting single words as we did here, we could count sequences of words, like “clean match” and “close election”. Of course, to use this we will need some language aware tools. "
+        "Instead of counting single words as we did here, we could count sequences of words, like “clean match” and “close election”. Of course, to use this we will need some language aware tools. You can use the free, open source NLP libray SpaCy for generating n-grams. "
       ]
     },
     {
@@ -917,7 +917,7 @@
         "id": "D-CkJ9ca85i2"
       },
       "source": [
-        "As you can imagine, this approach causes a significant dimensionality problem: the more documents you have the larger is the vocabulary, so the feature matrix will be a huge sparse matrix. Therefore, the Bag-of-Words model is usually preceded by an important preprocessing (word cleaning, stop words removal, stemming/lemmatization) aimed to reduce the dimensionality problem.\n",
+        "- As you can imagine, this approach causes a significant dimensionality problem: the more documents you have the larger is the vocabulary, so the feature matrix will be a huge sparse matrix. - Therefore, the Bag-of-Words model is usually preceded by an important preprocessing (word cleaning, stop words removal, stemming/lemmatization) aimed to reduce the dimensionality problem.\n",
         "\n",
         "Terms frequency is not necessarily the best representation for text. In fact, you can find in the corpus common words with the highest frequency but little predictive power over the target variable. \n",
         "\n",
@@ -1004,7 +1004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -1018,6 +1018,14 @@
             "  (1, 2)\t0.7049094889309326\n",
             "  (1, 0)\t0.5015489070943787\n",
             "  (1, 3)\t0.5015489070943787\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\jcor864\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+            "  warnings.warn(msg, category=FutureWarning)\n"
           ]
         }
       ],
