--- a/121-pretrained_word_embeddings_case_spam.ipynb
+++ b/121-pretrained_word_embeddings_case_spam.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 2,
       "metadata": {
         "id": "Ms0fWnI2PyL2"
       },
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,7 +119,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 4,
       "metadata": {
         "id": "ljOBisG4Eju7"
       },
@@ -201,7 +201,7 @@
               "4   ham  Nah I don't think he goes to usf, he lives aro..."
             ]
           },
-          "execution_count": 27,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -213,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -287,7 +287,7 @@
               "4      1  Nah I don't think he goes to usf, he lives aro..."
             ]
           },
-          "execution_count": 28,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 6,
       "metadata": {
         "id": "8jeo1-3RGIFC"
       },
@@ -378,7 +378,7 @@
               "max       1.000000"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -433,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -513,7 +513,7 @@
               "4      1         nah n't think goes usf lives around though              8"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -526,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 9,
       "metadata": {
         "id": "l-4cl8dqHUyU"
       },
@@ -545,7 +545,7 @@
               "Name: numberOfWords, dtype: float64"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -558,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -602,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -630,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -678,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 13,
       "metadata": {
         "id": "t9vR-3X7Cy7D"
       },
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -742,7 +742,7 @@
               " 'day']"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -763,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -787,7 +787,7 @@
               "      dtype=int64)"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -817,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 16,
       "metadata": {
         "id": "cYtTe3gQDwEA"
       },
@@ -838,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -853,7 +853,7 @@
               "[826, 'N/A', 3, 'N/A', 137, 55]"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -882,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 18,
       "metadata": {
         "id": "AybfgXLHEimc"
       },
@@ -935,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -985,7 +985,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1000,7 +1000,7 @@
           "text": [
             "Converted 5400 words (2076 misses)\n",
             "*** shape of the embedding matrix:***\n",
-            "(7478, 100)\n",
+            "(7476, 100)\n",
             "*** Missed words = words not in word_index ***\n",
             "['', '[UNK]', 'thanx', '£1000', '150ppm', 'aight', '150p', '£2000', '£150', '£100']\n",
             "\n",
@@ -1051,7 +1051,7 @@
         }
       ],
       "source": [
-        "num_tokens = len(voc) # + 2\n",
+        "num_tokens = len(voc) \n",
         "# each word is represented by a vector of 100 floats (glove.6B.100d.txt)\n",
         "embedding_dim = 100\n",
         "hits = 0\n",
@@ -1101,7 +1101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1114,7 +1114,7 @@
               "       ['ok ...']], dtype=object)"
             ]
           },
-          "execution_count": 50,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1125,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -1138,7 +1138,7 @@
               "       ['ok ...']], dtype=object)"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1159,7 +1159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1228,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1239,16 +1239,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "7478"
+              "7476"
             ]
           },
-          "execution_count": 54,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1259,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1295,7 +1295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1312,7 +1312,7 @@
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " embedding (Embedding)       (None, 25, 100)           747800    \n",
+            " embedding (Embedding)       (None, 25, 100)           747600    \n",
             "                                                                 \n",
             " flatten (Flatten)           (None, 2500)              0         \n",
             "                                                                 \n",
@@ -1335,9 +1335,9 @@
             " dense_4 (Dense)             (None, 2)                 202       \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 1,028,402\n",
+            "Total params: 1,028,202\n",
             "Trainable params: 280,602\n",
-            "Non-trainable params: 747,800\n",
+            "Non-trainable params: 747,600\n",
             "_________________________________________________________________\n"
           ]
         }
@@ -1356,7 +1356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -1364,13 +1364,13 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/20\n",
-            "61/61 [==============================] - 1s 11ms/step - loss: 0.5409 - accuracy: 0.8723 - val_loss: 0.1559 - val_accuracy: 0.9402\n",
+            "61/61 [==============================] - 1s 5ms/step - loss: 0.5409 - accuracy: 0.8723 - val_loss: 0.1559 - val_accuracy: 0.9402\n",
             "Epoch 2/20\n",
-            "61/61 [==============================] - 1s 9ms/step - loss: 0.1596 - accuracy: 0.9464 - val_loss: 0.1055 - val_accuracy: 0.9671\n",
+            "61/61 [==============================] - 0s 3ms/step - loss: 0.1596 - accuracy: 0.9464 - val_loss: 0.1055 - val_accuracy: 0.9671\n",
             "Epoch 3/20\n",
-            "61/61 [==============================] - 1s 8ms/step - loss: 0.1156 - accuracy: 0.9631 - val_loss: 0.1578 - val_accuracy: 0.9671\n",
+            "61/61 [==============================] - 0s 3ms/step - loss: 0.1156 - accuracy: 0.9631 - val_loss: 0.1578 - val_accuracy: 0.9671\n",
             "Epoch 4/20\n",
-            "61/61 [==============================] - 1s 9ms/step - loss: 0.1022 - accuracy: 0.9713 - val_loss: 0.1233 - val_accuracy: 0.9599\n"
+            "61/61 [==============================] - 0s 3ms/step - loss: 0.1022 - accuracy: 0.9713 - val_loss: 0.1233 - val_accuracy: 0.9599\n"
           ]
         }
       ],
@@ -1403,7 +1403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1463,7 +1463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1488,7 +1488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
