--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -85,7 +85,7 @@
     "    3.  [Exercise E-mail classification](122-exercise_email_classification.ipynb)\n",
     "4.  Deep Computer Vision Using Convolutional Neural Networks\n",
     "    1.  [Notebook](130-deep_computer_vision_with_cnns.ipynb)\n",
-    "    2.  [Excerice CNN -MNIST](131-deep_computer_vision_with_cnns_exercise_mnist.ipynb)\n",
+    "    2.  [Exercice CNN -MNIST](131-deep_computer_vision_with_cnns_exercise_mnist.ipynb)\n",
     "\n",
     "### SOLUTIONS\n",
     "\n",
