--- a/130-deep_computer_vision_with_cnns.ipynb
+++ b/130-deep_computer_vision_with_cnns.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,11 +125,12 @@
     "  \n",
     "![](img/cnn.png)\n",
     "\n",
-    "- All the multilayer neural networks we’ve looked at so far had layers composed of a long line of neurons, and we had to flatten input images to 1D before feeding them to the neural network. In a CNN each layer is represented in 2D, which makes it easier to match neurons with their corresponding inputs.\n",
+    "- All the multilayer neural networks we’ve looked at so far had layers composed of a long line of neurons, and we had to flatten input images to 1D before feeding them to the neural network. \n",
+    "- In a CNN each layer is represented in 2D, which makes it easier to match neurons with their corresponding inputs.\n",
     "- In a CNN, each neuron in the second layer is connected only to neurons located within a small rectangle in the first layer.\n",
     "- This architecture allows the network to **concentrate on small low-level features in the first hidden layer**, **then** assemble them into **larger higher-level features in the next hidden layer**, and so on.\n",
     "- A neuron located in row $i$, column $j$ of a given layer is connected to the outputs of the neurons in the previous layer located in rows $i$ to $i + f_h – 1$, columns $j$ to $j + f_w – 1$, where $f_h$ and $f_w$ are the height and width of the receptive field (see figure below). \n",
-    "- In order for a layer to have the same height and width as the previous layer, it is common to add zeros around the inputs, as shown in the diagram. This is called zero padding.\n",
+    "- In order **for a layer to have the same height and width as the previous layer**, it is common to **add zeros around the inputs**, as shown in the diagram. This is called **zero padding**.\n",
     "\n",
     "![](img/cnn_connections.png)\n",
     "\n",
@@ -171,7 +172,7 @@
     "- Note that all neurons located in the same row $i$ and column $j$ but in different feature maps are connected to the outputs of the exact same neurons in the previous layer.\n",
     "- Each CNN layer has one neuron per pixel in each feature map, and all neurons within a given feature map share the same parameters (i.e., the same weights and bias term). \n",
     "- Neurons in different feature maps use different parameters.\n",
-    "- The fact that all neurons in a feature map share the same parameters dramatically reduces the number of parameters in the model. \n",
+    "- **The fact that all neurons in a feature map share the same parameters dramatically reduces the number of parameters in the model**. \n",
     "- Once the CNN has learned to recognize a pattern in one location, it can recognize it in any other location. \n",
     "- In contrast, once a regular DNN has learned to recognize a pattern in one location, it can recognize it only in that particular location.\n",
     "- Thus, a convolutional layer simultaneously applies multiple trainable filters to its inputs, making it capable of detecting multiple features anywhere in its inputs.\n",
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +264,7 @@
    "source": [
     "batch_size, height, width, channels = images.shape\n",
     "\n",
-    "# Create 2 filters appliy them to both images\n",
+    "# Create 2 filters apply them to both images\n",
     "filters = np.zeros(shape=(7, 7, channels, 2), dtype=np.float32)\n",
     "filters[:, 3, :, 0] = 1  # vertical line in the middle: all rows, 3d column, all channels, first filter\n",
     "filters[3, :, :, 1] = 1  # horizontal line in the middle: 3d row, all columns, all channels, second filter\n",
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "TensorShape([2, 427, 640, 2])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +444,7 @@
     "- Their goal is to subsample (i.e., shrink) the input image in order to reduce the computational load, the memory usage, and the number of parameters (thereby limiting the risk of overfitting).\n",
     "- Just like in convolutional layers, each neuron in a pooling layer is connected to the outputs of a limited number of neurons in the previous layer, located within a small Rectangular receptive field. \n",
     "- You must define its size, the stride, and the padding type, just like before. \n",
-    "- However, a pooling neuron has no weights; all it does is aggregate the inputs using an aggregation function such as the max or mean.\n",
+    "- However, **a pooling neuron has no weights; all it does is aggregate the inputs using an aggregation function such as the max or mean**.\n",
     "- This figure shows a max pooling layer, which is the most common type of pooling layer: \n",
     "\n",
     "![](img/pooling.png)\n",
@@ -533,7 +534,7 @@
    "source": [
     "## Average pooling\n",
     "\n",
-    "- works exactly like a max pooling layer, except it computes the mean rather than the max. \n",
+    "- Works exactly like a max pooling layer, except it computes the mean rather than the max. \n",
     "- Average pooling layers used to be very popular, but people mostly use **max pooling** layers now, as they **generally perform better**. \n",
     "- This may seem surprising, since computing the mean generally loses less information than computing the max. \n",
     "- But on the other hand, **max pooling preserves only the strongest features**, getting rid of all the meaningless ones, so the next layers get a cleaner signal to work with. \n",
