--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -99,6 +99,8 @@
     "- [Clustering - Wholesale customers](solutions/085-clustering_exercise_wholesale_customers_solution.ipynb)\n",
     "- [NN - penguins/breast cancer](solutions/101-exercise_pinguins_breast_cancer_solution.ipynb)\n",
     "- [NN - churn](solutions/111-exercise_churn_solution.ipynb)\n",
+    "- [NN - e-mail classification](solutions/122-exercise_email_classification_solution.ipynb)\n",
+    "- [CNN - MNIST](solutions/131-deep_computer_vision_with_cnns_exercise_mnist_solution.ipynb)\n",
     "\n"
    ]
   }
