--- a/120-document_classification_and_nlp.ipynb
+++ b/120-document_classification_and_nlp.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "CpMifYkx85is",
         "outputId": "aba56e7b-c7f2-49d4-9e8e-2157f2a9b162"
@@ -58,7 +58,7 @@
               "'en'"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "SpGrdwWQ85iu",
         "outputId": "310be6a1-ca6d-4a5a-937d-c53c58493f56"
@@ -89,7 +89,7 @@
               "'de'"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "m1t3_UqH85iu",
         "outputId": "e15b665c-9dda-4108-c4e5-6d3a57ee1c09"
@@ -112,7 +112,7 @@
               "'fr'"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "YhUN2Tjh85iv",
         "outputId": "2e5bec34-777d-47b2-b67e-26676f1fcf3e"
@@ -135,7 +135,7 @@
               "'nl'"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -155,7 +155,7 @@
               "'es'"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -678,108 +678,113 @@
             "[nltk_data]    |   Package sample_grammars is already up-to-date!\n",
             "[nltk_data]    | Downloading package semcor to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]    |   Package semcor is already up-to-date!\n",
             "[nltk_data]    | Downloading package senseval to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\senseval.zip.\n",
+            "[nltk_data]    |   Package senseval is already up-to-date!\n",
             "[nltk_data]    | Downloading package sentence_polarity to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\sentence_polarity.zip.\n",
+            "[nltk_data]    |   Package sentence_polarity is already up-to-date!\n",
             "[nltk_data]    | Downloading package sentiwordnet to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\sentiwordnet.zip.\n",
+            "[nltk_data]    |   Package sentiwordnet is already up-to-date!\n",
             "[nltk_data]    | Downloading package shakespeare to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\shakespeare.zip.\n",
+            "[nltk_data]    |   Package shakespeare is already up-to-date!\n",
             "[nltk_data]    | Downloading package sinica_treebank to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\sinica_treebank.zip.\n",
+            "[nltk_data]    |   Package sinica_treebank is already up-to-date!\n",
             "[nltk_data]    | Downloading package smultron to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\smultron.zip.\n",
+            "[nltk_data]    |   Package smultron is already up-to-date!\n",
             "[nltk_data]    | Downloading package snowball_data to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]    |   Package snowball_data is already up-to-date!\n",
             "[nltk_data]    | Downloading package spanish_grammars to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping grammars\\spanish_grammars.zip.\n",
+            "[nltk_data]    |   Package spanish_grammars is already up-to-date!\n",
             "[nltk_data]    | Downloading package state_union to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\state_union.zip.\n",
+            "[nltk_data]    |   Package state_union is already up-to-date!\n",
             "[nltk_data]    | Downloading package stopwords to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package stopwords is already up-to-date!\n",
             "[nltk_data]    | Downloading package subjectivity to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\subjectivity.zip.\n",
+            "[nltk_data]    |   Package subjectivity is already up-to-date!\n",
             "[nltk_data]    | Downloading package swadesh to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\swadesh.zip.\n",
+            "[nltk_data]    |   Package swadesh is already up-to-date!\n",
             "[nltk_data]    | Downloading package switchboard to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\switchboard.zip.\n",
+            "[nltk_data]    |   Package switchboard is already up-to-date!\n",
             "[nltk_data]    | Downloading package tagsets to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping help\\tagsets.zip.\n",
+            "[nltk_data]    |   Package tagsets is already up-to-date!\n",
             "[nltk_data]    | Downloading package timit to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\timit.zip.\n",
+            "[nltk_data]    |   Package timit is already up-to-date!\n",
             "[nltk_data]    | Downloading package toolbox to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\toolbox.zip.\n",
+            "[nltk_data]    |   Package toolbox is already up-to-date!\n",
             "[nltk_data]    | Downloading package treebank to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\treebank.zip.\n",
+            "[nltk_data]    |   Package treebank is already up-to-date!\n",
             "[nltk_data]    | Downloading package twitter_samples to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\twitter_samples.zip.\n",
+            "[nltk_data]    |   Package twitter_samples is already up-to-date!\n",
             "[nltk_data]    | Downloading package udhr to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\udhr.zip.\n",
+            "[nltk_data]    |   Package udhr is already up-to-date!\n",
             "[nltk_data]    | Downloading package udhr2 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\udhr2.zip.\n",
+            "[nltk_data]    |   Package udhr2 is already up-to-date!\n",
             "[nltk_data]    | Downloading package unicode_samples to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\unicode_samples.zip.\n",
+            "[nltk_data]    |   Package unicode_samples is already up-to-date!\n",
             "[nltk_data]    | Downloading package universal_tagset to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping taggers\\universal_tagset.zip.\n",
+            "[nltk_data]    |   Package universal_tagset is already up-to-date!\n",
             "[nltk_data]    | Downloading package universal_treebanks_v20 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]    |   Package universal_treebanks_v20 is already up-to-\n",
+            "[nltk_data]    |       date!\n",
             "[nltk_data]    | Downloading package vader_lexicon to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]    |   Package vader_lexicon is already up-to-date!\n",
             "[nltk_data]    | Downloading package verbnet to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\verbnet.zip.\n",
+            "[nltk_data]    |   Package verbnet is already up-to-date!\n",
             "[nltk_data]    | Downloading package verbnet3 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\verbnet3.zip.\n",
+            "[nltk_data]    |   Package verbnet3 is already up-to-date!\n",
             "[nltk_data]    | Downloading package webtext to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\webtext.zip.\n",
+            "[nltk_data]    |   Package webtext is already up-to-date!\n",
             "[nltk_data]    | Downloading package wmt15_eval to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping models\\wmt15_eval.zip.\n",
+            "[nltk_data]    |   Package wmt15_eval is already up-to-date!\n",
             "[nltk_data]    | Downloading package word2vec_sample to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping models\\word2vec_sample.zip.\n",
+            "[nltk_data]    |   Package word2vec_sample is already up-to-date!\n",
             "[nltk_data]    | Downloading package wordnet to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package wordnet is already up-to-date!\n",
             "[nltk_data]    | Downloading package wordnet2021 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\wordnet2021.zip.\n",
+            "[nltk_data]    |   Package wordnet2021 is already up-to-date!\n",
             "[nltk_data]    | Downloading package wordnet31 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\wordnet31.zip.\n",
+            "[nltk_data]    |   Package wordnet31 is already up-to-date!\n",
             "[nltk_data]    | Downloading package wordnet_ic to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\wordnet_ic.zip.\n",
+            "[nltk_data]    |   Package wordnet_ic is already up-to-date!\n",
             "[nltk_data]    | Downloading package words to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\words.zip.\n",
+            "[nltk_data]    |   Package words is already up-to-date!\n",
             "[nltk_data]    | Downloading package ycoe to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Unzipping corpora\\ycoe.zip.\n",
+            "[nltk_data]    |   Package ycoe is already up-to-date!\n",
             "[nltk_data]    | \n",
             "[nltk_data]  Done downloading collection all\n"
           ]
@@ -813,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
         "id": "re6EbJYy85i0",
         "outputId": "e246072d-4164-4aee-b11c-9ad107d8e4d6"
