--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -30,8 +30,9 @@
     "\n",
     "### PART 1 - The fundamentals of Machine Learning\n",
     "1. The Machine Learning Landscape\n",
-    "    1. [Slides](010-the_machine_learning_landscape.pdf)  \n",
-    "    1. [Notebook](011-the_machine_learning_landscape.ipynb)\n",
+    "   1. Introduction\n",
+    "       1. [Slides](010-the_machine_learning_landscape.pdf)  \n",
+    "       2. [Notebook](011-the_machine_learning_landscape.ipynb)\n",
     "    2. Python crash course\n",
     "       1. [Notebook](012-python_crash_course.ipynb)\n",
     "    3. Numpy\n",
@@ -39,8 +40,9 @@
     "        2. [Indexing and Selection](013-1-numpy_indexing-and_selection.ipynb)\n",
     "        3. [Operations](013-2-numpy_operations.ipynb)\n",
     "        4. [Exercises](013-3-numpy_exercises.ipynb)\n",
-    "    4. [Pandas en Matplotlib](014-pandas_matplotlib_introduction_case_corona.ipynb)\n",
-    "    5. [Exercise \"Monte Carlo simulation for condensators\"](015-exercise_montecarlo.ipynb)\n",
+    "    4. [Pandas](014-pandas.ipynb)\n",
+    "    5. [Matplotlib](015-matplotlib.ipynb)\n",
+    "    6. [Exercise \"Monte Carlo simulation for condensators\"](015-exercise_montecarlo.ipynb)\n",
     "2. End-toEnd Machine Learning Project\n",
     "    1. [Notebook](020-end_to_end_machine_learning_project.ipynb)  \n",
     "    2. [Excercise \"Building OAT\"](021-exercise_building_oat.ipynb)\n",
@@ -68,7 +70,7 @@
     "   4. [Clustering](083-clustering.ipynb)\n",
     "   5. [Clustering Case Income-Spent](084-clustering_case_income_spent.ipynb)\n",
     "   6. [Exercise \"Wholesale customers\"](085-clustering_exercise_wholesale_customers.ipynb)\n",
-    "9. Dimensionality Reduction\n",
+    "9.  Dimensionality Reduction\n",
     "   1. [t-SNE Visualization](090-tsne_visualization.ipynb)\n",
     "   \n",
     "###  PART 2 - Neural Networks and Deep Learning\n",
