--- a/012-python_crash_course.ipynb
+++ b/012-python_crash_course.ipynb
@@ -7,7 +7,9 @@
       },
       "source": [
         "# Introduction Python\n",
-        "How important is Python: https://www.tiobe.com/tiobe-index/ "
+        "How important is Python: https://www.tiobe.com/tiobe-index/ \n",
+        "\n",
+        "Python notebook is example of \"Read–eval–print\" loop. "
       ]
     },
     {
@@ -142,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Y1YpOLvFh_cj",
         "outputId": "d5ae1559-27b1-4f68-b722-ccdf90afda34"
@@ -183,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "uU_UfRWuh_ck",
         "outputId": "5812b005-ac4c-4b41-b275-ee58dc03eb71"
@@ -223,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "TWNAXid8h_ck"
       },
@@ -281,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "eohGIFjPh_cl",
         "outputId": "f544f415-e001-434a-de29-8262188bd881"
@@ -340,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "ZHqpZCkFh_cl",
         "outputId": "4b690abf-d6fd-43c7-93fd-d82386572758"
@@ -376,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "BCc1WV2Yh_cm",
         "outputId": "476fc693-36bf-40fa-869d-0f6315da2086"
@@ -434,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "DYP3WdHdh_cm",
         "outputId": "57d852b7-7e87-4659-e5ac-343845ca9793"
@@ -479,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "nXm7UTq4h_cm",
         "outputId": "529e8918-bba9-4f38-87cf-e837d28625a1"
@@ -517,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "lUsDaWuQh_cn",
         "outputId": "79d51c87-5b52-4444-c08c-4b301b118168"
@@ -574,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "skiX6Gybh_cn",
         "outputId": "2bdfa385-1262-4c67-f841-ef629057aaa3"
@@ -631,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "cweFHgp3h_cn",
         "outputId": "33d2934d-ce23-4391-b94b-88a58a653380"
@@ -676,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "UzP_CGH_h_cn",
         "outputId": "eda0f984-7941-4b37-b6e9-60033b7ea5b0"
@@ -713,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "42vGyVgah_co",
         "outputId": "f0492c77-ea5c-4f3d-fd06-2bd65a96908e"
@@ -746,11 +748,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "G1_BegMph_co"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 4, 9, 16]\n"
+          ]
+        }
+      ],
       "source": [
         "nums = [0, 1, 2, 3, 4]\n",
         "squares = [x ** 2 for x in nums]\n",
@@ -768,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "v4DgsmgXh_co",
         "outputId": "d8a3d432-26cb-4aee-f49e-cefa7f373d98"
@@ -802,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "4FTQQyJmh_co",
         "outputId": "9b02ab26-024c-4446-c4c3-efb4a21384e9"
@@ -846,7 +856,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "FOueTjA9h_cp",
         "outputId": "b96e3948-0098-4c63-f331-c99ea00ef15e"
@@ -883,7 +893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "Urx6_IcSh_cp",
         "outputId": "6d0193d3-a439-469a-996c-ba2992ad06a4"
@@ -916,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "hh40qrVmh_cp",
         "outputId": "49dfb6f6-8e96-4d3e-bed6-378a16c135ba"
@@ -961,7 +971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "1TRlYp8kh_cp",
         "outputId": "e28b5269-a51a-46c3-cc26-e43b07eef112"
@@ -971,9 +981,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "#1: dog\n",
+            "#1: cat\n",
             "#2: fish\n",
-            "#3: cat\n"
+            "#3: dog\n"
           ]
         }
       ],
@@ -996,7 +1006,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "64L6lRRHh_cp",
         "outputId": "652cc998-a517-4950-b2de-b0eaebd5d000"
@@ -1032,7 +1042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "JEJyZKeih_cp",
         "outputId": "7e3dd233-8898-4d5b-e13c-9fbf4658e15f"
@@ -1078,7 +1088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "VzG0b6iWh_cq",
         "outputId": "db7d7c7c-3487-4e1c-c6e7-83bc85067777"
@@ -1119,7 +1129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "LWtxa4Ish_cq",
         "outputId": "a5c4ecad-3ac9-4728-c991-45d44fa0d2f5"
@@ -1158,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 27,
       "metadata": {
         "id": "QxbB0zv2h_cq",
         "outputId": "c59c62c1-e8c5-494b-e775-674a8a9794b9"
@@ -1220,7 +1230,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.10.10"
     }
   },
   "nbformat": 4,
