--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -91,6 +91,10 @@
     "\n",
     "### SOLUTIONS\n",
     "\n",
+    "[Brussels Temperatures](../ai_ml_solutions/011-the_machine_learning_landscape_solution.ipynb)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
