--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "### SOLUTIONS\n",
     "\n",
-    "[Brussels Temperatures](../ai_ml_solutions/011-the_machine_learning_landscape_solution.ipynb)\n",
+    "[Brussels Temperatures](solutions/011-the_machine_learning_landscape_solution.ipynb)\n",
     "\n",
     "\n",
     "\n",
