training models + exercises

--- a/030-classification.ipynb
+++ b/030-classification.ipynb
@@ -934,9 +934,9 @@
     "# The ROC Curve\n",
     "\n",
     "- The _receiver operating characteristic_ (ROC) curve is common tool used with binary classifiers.\n",
-    "- It plots the _true positive rate_ (another name for recall) against the _false positive rate_ (FPR).\n",
+    "- It plots the _true positive rate_ (another name for recall) against the _false positive rate_ (FPR) for various threshold values.\n",
     "- The FPR (also called the _fall-out_) is the ratio of negative instances that are incorrectly classified as positive. \n",
-    "- It is equal to 1 – the _true negative rate (TNR)_, which is the ratio of negative instances that are correctly classified as negative. \n",
+    "- It is equal to (1 – the _true negative rate (TNR)_), which is the ratio of negative instances that are correctly classified as negative. \n",
     "- The TNR is also called _specificity_. Hence, the ROC curve plots sensitivity (recall) versus 1 – specificity.\n",
     "- To plot the ROC curve, we first use the `roc_curve()` function to compute the TPR and FPR for various threshold values.\n",
     "- We can use the `cross_val_predict()` function to get the scores of all instances in the training set, but this time we specify that we want to get the decision scores instead of predictions:"
