--- a/040-training_models.ipynb
+++ b/040-training_models.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Chapter 1 we looked at a simple regression model of life satisfaction:\n",
+    "A simple regression model of life satisfaction might look like this:\n",
     "\n",
     "$$\n",
     "LifeSatisfaction = θ_0 + θ_1 × GDPPerCapita\n",
@@ -349,6 +349,12 @@
     "- In each epoch we iterate through $m$ (= number of instances in the training set) randomly selected instances. \n",
     "- At each such an iteration we calculate the gradient and try to approach the minimum a bit closer. \n",
     "- Number of epochs = number of times we go through the complete training set.\n",
+    "- So we have a nested loop:\n",
+    "```\n",
+    "  for epoch in range(n_epochs):  \n",
+    "    for iteration in range(m):\n",
+    "    # calculate gradient for a randomly (stochastic) chosen instance\n",
+    "```\n",
     "\n",
     "**The number of epochs is an important hyperparameter for algorithms that use stochastic gradient descent.**\n",
     "\n",
