Building OAT sol

--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -92,6 +92,7 @@
     "### SOLUTIONS\n",
     "\n",
     "[Brussels Temperatures](solutions/011-the_machine_learning_landscape_solution.ipynb)\n",
+    "[Building OAT](solutions/021-exercise_building_oat_solution.ipynb)\n",
     "\n",
     "\n",
     "\n",
