--- a/060-decision_trees.ipynb
+++ b/060-decision_trees.ipynb
@@ -38,13 +38,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python ≥3.5 is required\n",
+    "# Python ≥3.7 is required\n",
     "import sys\n",
-    "assert sys.version_info >= (3, 5)\n",
+    "assert sys.version_info >= (3, 7)\n",
     "\n",
-    "# Scikit-Learn ≥0.20 is required\n",
+    "# Scikit-Learn ≥1.01 is required\n",
+    "from packaging import version\n",
     "import sklearn\n",
-    "assert sklearn.__version__ >= \"0.20\"\n",
+    "assert version.parse(sklearn.__version__) >= version.parse(\"1.0.1\")\n",
     "\n",
     "# Common imports\n",
     "import numpy as np\n",
@@ -54,12 +55,13 @@
     "np.random.seed(42)\n",
     "\n",
     "# To plot pretty figures\n",
-    "%matplotlib inline\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "mpl.rc('axes', labelsize=14)\n",
-    "mpl.rc('xtick', labelsize=12)\n",
-    "mpl.rc('ytick', labelsize=12)\n"
+    "plt.rc('font', size=14)\n",
+    "plt.rc('axes', labelsize=14, titlesize=14)\n",
+    "plt.rc('legend', fontsize=14)\n",
+    "plt.rc('xtick', labelsize=10)\n",
+    "plt.rc('ytick', labelsize=10)"
    ]
   },
   {
@@ -105,12 +107,12 @@
     "from sklearn.datasets import load_iris\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "iris = load_iris()\n",
-    "X = iris.data[:, 2:] # petal length and width\n",
-    "y = iris.target\n",
+    "iris = load_iris(as_frame=True)\n",
+    "X_iris = iris.data[[\"petal length (cm)\", \"petal width (cm)\"]].values\n",
+    "y_iris = iris.target\n",
     "\n",
-    "tree_clf = DecisionTreeClassifier(max_depth=2, random_state=42)\n",
-    "tree_clf.fit(X, y)"
+    "tree_clf = DecisionTreeClassifier(max_leaf_nodes=5,random_state=42)\n",
+    "tree_clf.fit(X_iris, y_iris)"
    ]
   },
   {
@@ -440,6 +442,15 @@
     "        rounded=True,\n",
     "        filled=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you can execute  \n",
+    "\n",
+    "  `dot -Tpng iris_tree.dot -o regression_tree.png`  "
    ]
   },
   {
