--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -61,7 +61,7 @@
     "    2. [Exercise \"Penguins\"](061-exercise_penguins.ipynb)\n",
     "7. Ensemble Learning and Random Forests\n",
     "    1. [Notebook](070-ensemble_learning_and_random_forests.ipynb)\n",
-    "    2. [Exercise](071-exercise-ensembles_breast_cancer.ipynb)\n",
+    "    2. [Exercise \"Churn\"](071-exercise-ensembles_churn.ipynb)\n",
     "8. Unsupervised Learning\n",
     "   1. [Association Rules](080-association_rules.ipynb)\n",
     "   2. [Association Rules: case online retail](081-market_basket_analysis_retail.ipynb)\n",
