--- a/092-unsupervised_learning_exercise.ipynb
+++ b/092-unsupervised_learning_exercise.ipynb
@@ -250,7 +250,7 @@
         "id": "KpsLAgExwo6O"
       },
       "source": [
-        "*Split it into a training set, a validation set, and a test set (note that the dataset is already scaled between 0 and 1). Since the dataset is quite small, you probably want to use stratified sampling to ensure that there are the same number of images per person in each set.  \n",
+        "Split it into a training set, a validation set, and a test set (note that the dataset is already scaled between 0 and 1). Since the dataset is quite small, you probably want to use stratified sampling to ensure that there are the same number of images per person in each set.  \n",
         "\n",
         "Use 40 instances for the test set, then from the remaining training set, use 80 instances for the validation set.*"
       ]
